# SFMLFirstProgram

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
